# sprig

./: (not) Just Another Maze Game.js  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  2048.js  24hrs-of-LeStoopid.js  2Psplashflame.js  A Space Odyssey.js  AAAAHHHHHHHHHHHH.js  ASSEMBLY.md  Adi's game (1).js  Alien Run.js  Alien poop.js  Alien-poop.js  Apple Catch.js  Banana Man.js  Battle ship.js  Biding Boom.js  BitBoy's Adventure (2).js  BitBoy's_Adventure.js  BitBoy_Adventure.js  Blocky (1).js  Bottom_of_the_Barrel.js  BoxStack (1).js  BoxStack.js  Breakout.js  CATCH-ME.js  CONTRIBUTING.md  Car Park Escape.js  CheckerInvasion.js  Chess Puzzle (1).js  Chess.js  CollectTheCoin.js  DINOSAUR Game.js  DODGE! .js  DRAFT.js  Dementia.js  (+233 more)
.astro/: data-store.json  settings.json  types.d.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
@codemirror/: basic-setup.js  index-21cccc4d.js  index-6111ce93.js  lang-javascript.js  language.js  view.js
V7/: sprig_cover V7 v1.f3d  sprig_cover V7_.step
VS-Sprig/: CHANGELOG.md  README.md  package-lock.json  package.json
api/: _dev.js  deploy.js  preview.js  share.js
assets/: ui-sounds.js
blog/: pork.md  steak.md
c/: base_engine.c  build.sh  test.sh
challenges/: 00-jumpstart.json  01-crisis-averted.json  02-left-behind.json  03-whats-the-hold-up.json  04-add-bounce-sound.json  04-all-in-order.json  06-debarchery.json  06-off-the-wall.json  08-hoppin-rockets.json  09-animation_station.json  10-mile-high-club.json  9-one-jump.json  README.md  add-bounce-sound.md  animate-sprite.md  fall-on-platform.md  genQuest.js  increment-names.js  jump-height.md  make-it-go-left.md  make-it-solid.md  make-paddles-consistently-spaced.md  migration.js  only-one-jump.md  pass-score-to-leaderboard.md  quest.js  touch-to-collect.md
codemirror/: basicSetup.js  booleanCheckbox.js  booleanExtension.js  cm.js  editors.js  mapEditor.js  openButton.js  spriteEditor.js  spriteExtension.js  spriteTuneEditors.js  util.js
color-picker/: color-picker.js  style.js
components/: addAssetButton.js  bugReport.js  button.js  githubLink.js  menuButtons.js  nameBar.js  reference.js  renderDocs.js  runButton.js  saveFile.js  saveLink.js  tooltip.js
demos/: asteroids.js  basic-example.json  engine-demo.js  simple-platform.json
depracated_games.js/: ch_2_walk.js  ch_4_heave.js  ch_6_level_up.js  flightless_bird.js
deprecated_games.js/: ch_1_bean.js  ch_3_trellis.js  ch_5_victory.js
dispatches/: evalGameScript.js  init.js  loadFromURL.js  logError.js  run.js  setName.js  sizeGameCanvas.js  validateName.js
docs/: APP_REVIEW_RUNBOOK.md  ASSEMBLY.md  BACKBURNER.md  BEGINNER-WORKSHOP.md  BEGINNER_WORKSHOP.md  ENGINEERING_RUNBOOK.md  GETTING_STARTED.md  GET_A_SPRIG.md  GROWING_A_SPRIG.md  HACKATIME.md  README.md  SOURCING.md  SPRIG_APP_REVIEW.md  SPRIG_CASE_ASSEMBLY.md  STUCK_REQUESTS_RUNBOOK.md  UPLOAD.md  docs.js  docs.md  docusaurus.config.js  es-docs.md  md.js  package-lock.json  runbook.md  stuck_requests.md  style.js
engine/: .gitignore  GameObject.js  README.md  Sprite.js  Text.js  TimeKeeper.js  base.d.ts  base.js  baseEngine.js  bitmap.js  distanceTo.js  engine.js  evalGameScript.js  exportable_engine.js  font.js  web.js  (+19 more)
firmware/c_scaffold/: CMakeLists.txt  README.md  gardenshed.py
firmware/c_scaffold/docker/: buildScript.sh  importBuildRepos.sh
firmware/c_scaffold/src/: audio.h  buttons.h  common.h  main.c  text_rendering.h
firmware/nebula/src/: CMakeLists.txt
firmware/nebula/src/pc/: CMakeLists.txt  main.c
firmware/nebula/src/rpi/: CMakeLists.txt  ST7735_TFT.h  audio.c  display.c  main.c
firmware/nebula/src/shared/: hi.h  version.h
firmware/nebula/src/shared/audio/parse_tune/: gen_hash.c  test.c  tone_map.h
firmware/nebula/src/shared/js_runtime/: jerry_mem.h
firmware/nebula/src/shared/sprig_engine/: base_engine.c  base_engine.h  native_magic_strings.h  script.h
firmware/nebula/src/shared/ui/: font.h
firmware/spade/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-with-docker.sh  firmware.elf  firmware.uf2  start-debugger.sh
firmware/spade/docker/: buildScript.sh  dockerfile  importBuildRepos.sh
firmware/spade/src/: CMakeLists.txt
firmware/spade/src/pc/: CMakeLists.txt  audio.c  main.c
firmware/spade/src/pc/jerry/: refresh.sh
firmware/spade/src/rpi/: CMakeLists.txt  ST7735_TFT.h  audio.c  buttons.c  buttons.h  constants.h  lights.c  lights.h  main.c  memmap.ld  upload.c  upload.h
firmware/spade/src/rpi/jerry/: refresh.sh
firmware/spade/src/rpi/jerry/include/: jerryscript-config.h
firmware/spade/src/shared/: hw_config.c  version.h  version.h.in
firmware/spade/src/shared/FatFs_SPI/include/: my_debug.h
firmware/spade/src/shared/FatFs_SPI/sd_driver/: crc.c  crc.h  demo_logging.c  sd_spi.c  sd_spi.h  spi.c
firmware/spade/src/shared/FatFs_SPI/src/: ff_stdio.c  my_debug.c  rtc.c
firmware/spade/src/shared/audio/: audio.h  parse_tune.c  parse_tune.h  piano.c  piano.h  tone_map.c  tone_map.h
firmware/spade/src/shared/audio/parse_tune/: gen_hash.c  parse_tune.h
firmware/spade/src/shared/js_runtime/: jerry_mem.h  jerryxx.c  jerryxx.h  js.h
firmware/spade/src/shared/sprig_engine/: base_engine.c  base_engine.h  engine.js  hw_config.c  module_native.c  module_native.h  native_magic_strings.h  script.h
firmware/spade/src/shared/sprig_sd/: hw_config.c  sd_imports.h
firmware/spade/src/shared/sprig_sd/FatFs_SPI/: CMakeLists.txt
firmware/spade/src/shared/sprig_sd/FatFs_SPI/ff15/documents/: css_e.css
firmware/spade/src/shared/sprig_sd/FatFs_SPI/ff15/source/: ffconf.h
firmware/spade/src/shared/sprig_sd/FatFs_SPI/include/: f_util.h  ff_stdio.h  rtc.h  util.h
firmware/spade/src/shared/sprig_sd/FatFs_SPI/sd_driver/: hw_config.h  sd_card.c  sd_card.h  spi.h
firmware/spade/src/shared/sprig_sd/FatFs_SPI/src/: f_util.c  glue.c
firmware/spade/src/shared/ui/: errorbuf.h  font.h
firmware/spade/tools/: cstringify.py  jsdev.sh
firmware/sprig_hal/: CMakeLists.txt
firmware/sprig_hal/include/: HAL.h
firmware/sprig_hal/src/: HAL.c  ST7735_TFT.h
(+2948 files in other folders)
